// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-table-wrapper antd_formily_table_boost undefined"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        class="ant-table-selection-col"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <div
                            class="ant-table-selection"
                          >
                            <label
                              class="ant-checkbox-wrapper"
                            >
                              <span
                                class="ant-checkbox"
                              >
                                <input
                                  class="ant-checkbox-input"
                                  type="checkbox"
                                  value=""
                                />
                                <span
                                  class="ant-checkbox-inner"
                                />
                              </span>
                            </label>
                            <div
                              class="ant-table-selection-extra"
                            >
                              <span
                                class="ant-dropdown-trigger"
                              >
                                <span
                                  aria-label="down"
                                  class="anticon anticon-down"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          名字
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          年龄
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="0"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-checkbox-wrapper"
                          >
                            <span
                              class="ant-checkbox"
                            >
                              <input
                                class="ant-checkbox-input"
                                type="checkbox"
                                value=""
                              />
                              <span
                                class="ant-checkbox-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_0
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          0
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-checkbox-wrapper"
                          >
                            <span
                              class="ant-checkbox"
                            >
                              <input
                                class="ant-checkbox-input"
                                type="checkbox"
                                value=""
                              />
                              <span
                                class="ant-checkbox-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_1
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          1
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="2"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-checkbox-wrapper"
                          >
                            <span
                              class="ant-checkbox"
                            >
                              <input
                                class="ant-checkbox-input"
                                type="checkbox"
                                value=""
                              />
                              <span
                                class="ant-checkbox-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_2
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          2
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="3"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-checkbox-wrapper"
                          >
                            <span
                              class="ant-checkbox"
                            >
                              <input
                                class="ant-checkbox-input"
                                type="checkbox"
                                value=""
                              />
                              <span
                                class="ant-checkbox-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_3
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          3
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="4"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-checkbox-wrapper"
                          >
                            <span
                              class="ant-checkbox"
                            >
                              <input
                                class="ant-checkbox-input"
                                type="checkbox"
                                value=""
                              />
                              <span
                                class="ant-checkbox-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_4
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          4
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="5"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-checkbox-wrapper"
                          >
                            <span
                              class="ant-checkbox"
                            >
                              <input
                                class="ant-checkbox-input"
                                type="checkbox"
                                value=""
                              />
                              <span
                                class="ant-checkbox-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_5
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          5
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="6"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-checkbox-wrapper"
                          >
                            <span
                              class="ant-checkbox"
                            >
                              <input
                                class="ant-checkbox-input"
                                type="checkbox"
                                value=""
                              />
                              <span
                                class="ant-checkbox-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_6
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          6
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="7"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-checkbox-wrapper"
                          >
                            <span
                              class="ant-checkbox"
                            >
                              <input
                                class="ant-checkbox-input"
                                type="checkbox"
                                value=""
                              />
                              <span
                                class="ant-checkbox-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_7
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          7
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="8"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-checkbox-wrapper"
                          >
                            <span
                              class="ant-checkbox"
                            >
                              <input
                                class="ant-checkbox-input"
                                type="checkbox"
                                value=""
                              />
                              <span
                                class="ant-checkbox-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_8
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          8
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="9"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-checkbox-wrapper"
                          >
                            <span
                              class="ant-checkbox"
                            >
                              <input
                                class="ant-checkbox-input"
                                type="checkbox"
                                value=""
                              />
                              <span
                                class="ant-checkbox-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_9
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          9
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
            <ul
              class="ant-pagination ant-table-pagination ant-table-pagination-right"
              unselectable="unselectable"
            >
              <li
                class="ant-pagination-total-text"
              >
                共100条
              </li>
              <li
                aria-disabled="true"
                class="ant-pagination-prev ant-pagination-disabled"
                title="Previous Page"
              >
                <button
                  class="ant-pagination-item-link"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="left"
                    class="anticon anticon-left"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="left"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                tabindex="0"
                title="1"
              >
                <a
                  rel="nofollow"
                >
                  1
                </a>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-2"
                tabindex="0"
                title="2"
              >
                <a
                  rel="nofollow"
                >
                  2
                </a>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-3"
                tabindex="0"
                title="3"
              >
                <a
                  rel="nofollow"
                >
                  3
                </a>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-4"
                tabindex="0"
                title="4"
              >
                <a
                  rel="nofollow"
                >
                  4
                </a>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
                tabindex="0"
                title="5"
              >
                <a
                  rel="nofollow"
                >
                  5
                </a>
              </li>
              <li
                class="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
                tabindex="0"
                title="Next 5 Pages"
              >
                <a
                  class="ant-pagination-item-link"
                >
                  <div
                    class="ant-pagination-item-container"
                  >
                    <span
                      aria-label="double-right"
                      class="anticon anticon-double-right ant-pagination-item-link-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="double-right"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-pagination-item-ellipsis"
                    >
                      •••
                    </span>
                  </div>
                </a>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-10"
                tabindex="0"
                title="10"
              >
                <a
                  rel="nofollow"
                >
                  10
                </a>
              </li>
              <li
                aria-disabled="false"
                class="ant-pagination-next"
                tabindex="0"
                title="Next Page"
              >
                <button
                  class="ant-pagination-item-link"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="right"
                    class="anticon anticon-right"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="right"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li
                class="ant-pagination-options"
              >
                <div
                  class="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                        aria-autocomplete="list"
                        aria-controls="rc_select_TEST_OR_SSR_list"
                        aria-haspopup="listbox"
                        aria-owns="rc_select_TEST_OR_SSR_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="rc_select_TEST_OR_SSR"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="10 / page"
                    >
                      10 / page
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="ant-pagination-options-quick-jumper"
                >
                  Go to
                  <input
                    type="text"
                    value=""
                  />
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`LocalPage 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-table-wrapper antd_formily_table_boost undefined"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup />
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        >
                          名字
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          年龄
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="0"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_0
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          0
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_1
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          1
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="2"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_2
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          2
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="3"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_3
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          3
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="4"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_4
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          4
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="5"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_5
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          5
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="6"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_6
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          6
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="7"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_7
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          7
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="8"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_8
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          8
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="9"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_9
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          9
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
            <ul
              class="ant-pagination ant-table-pagination ant-table-pagination-right"
              unselectable="unselectable"
            >
              <li
                aria-disabled="true"
                class="ant-pagination-prev ant-pagination-disabled"
                title="Previous Page"
              >
                <button
                  class="ant-pagination-item-link"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="left"
                    class="anticon anticon-left"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="left"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                tabindex="0"
                title="1"
              >
                <a
                  rel="nofollow"
                >
                  1
                </a>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-2"
                tabindex="0"
                title="2"
              >
                <a
                  rel="nofollow"
                >
                  2
                </a>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-3"
                tabindex="0"
                title="3"
              >
                <a
                  rel="nofollow"
                >
                  3
                </a>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-4"
                tabindex="0"
                title="4"
              >
                <a
                  rel="nofollow"
                >
                  4
                </a>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
                tabindex="0"
                title="5"
              >
                <a
                  rel="nofollow"
                >
                  5
                </a>
              </li>
              <li
                class="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
                tabindex="0"
                title="Next 5 Pages"
              >
                <a
                  class="ant-pagination-item-link"
                >
                  <div
                    class="ant-pagination-item-container"
                  >
                    <span
                      aria-label="double-right"
                      class="anticon anticon-double-right ant-pagination-item-link-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="double-right"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-pagination-item-ellipsis"
                    >
                      •••
                    </span>
                  </div>
                </a>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-10"
                tabindex="0"
                title="10"
              >
                <a
                  rel="nofollow"
                >
                  10
                </a>
              </li>
              <li
                aria-disabled="false"
                class="ant-pagination-next"
                tabindex="0"
                title="Next Page"
              >
                <button
                  class="ant-pagination-item-link"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="right"
                    class="anticon anticon-right"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="right"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li
                class="ant-pagination-options"
              >
                <div
                  class="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                        aria-autocomplete="list"
                        aria-controls="rc_select_TEST_OR_SSR_list"
                        aria-haspopup="listbox"
                        aria-owns="rc_select_TEST_OR_SSR_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="rc_select_TEST_OR_SSR"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="10 / page"
                    >
                      10 / page
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div>
        {"current":1,"pageSize":10}
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`NoPage 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-table-wrapper antd_formily_table_boost undefined"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup />
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        >
                          名字
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          年龄
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="0"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_0
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          0
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_1
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          1
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="2"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_2
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          2
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="3"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_3
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          3
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="4"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_4
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          4
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="5"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_5
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          5
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="6"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_6
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          6
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="7"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_7
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          7
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="8"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_8
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          8
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="9"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_9
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          9
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="10"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_10
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          10
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="11"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_11
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          11
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="12"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_12
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          12
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="13"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_13
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          13
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="14"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_14
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          14
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="15"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_15
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          15
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="16"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_16
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          16
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="17"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_17
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          17
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="18"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_18
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          18
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="19"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_19
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          19
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="20"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_20
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          20
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="21"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_21
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          21
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="22"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_22
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          22
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="23"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_23
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          23
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="24"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_24
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          24
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="25"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_25
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          25
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="26"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_26
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          26
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="27"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_27
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          27
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="28"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_28
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          28
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="29"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_29
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          29
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="30"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_30
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          30
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="31"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_31
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          31
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="32"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_32
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          32
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="33"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_33
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          33
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="34"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_34
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          34
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="35"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_35
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          35
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="36"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_36
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          36
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="37"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_37
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          37
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="38"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_38
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          38
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="39"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          fish_39
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          39
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Radio 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-table-wrapper antd_formily_table_boost undefined"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        class="ant-table-selection-col"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell ant-table-selection-column"
                        />
                        <th
                          class="ant-table-cell"
                        >
                          名字
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          年龄
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="0"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-radio-wrapper"
                          >
                            <span
                              class="ant-radio"
                            >
                              <input
                                class="ant-radio-input"
                                type="radio"
                                value=""
                              />
                              <span
                                class="ant-radio-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_0
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          0
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-radio-wrapper"
                          >
                            <span
                              class="ant-radio"
                            >
                              <input
                                class="ant-radio-input"
                                type="radio"
                                value=""
                              />
                              <span
                                class="ant-radio-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_1
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          1
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="2"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-radio-wrapper"
                          >
                            <span
                              class="ant-radio"
                            >
                              <input
                                class="ant-radio-input"
                                type="radio"
                                value=""
                              />
                              <span
                                class="ant-radio-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_2
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          2
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="3"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-radio-wrapper"
                          >
                            <span
                              class="ant-radio"
                            >
                              <input
                                class="ant-radio-input"
                                type="radio"
                                value=""
                              />
                              <span
                                class="ant-radio-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_3
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          3
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="4"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-radio-wrapper"
                          >
                            <span
                              class="ant-radio"
                            >
                              <input
                                class="ant-radio-input"
                                type="radio"
                                value=""
                              />
                              <span
                                class="ant-radio-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_4
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          4
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="5"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-radio-wrapper"
                          >
                            <span
                              class="ant-radio"
                            >
                              <input
                                class="ant-radio-input"
                                type="radio"
                                value=""
                              />
                              <span
                                class="ant-radio-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_5
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          5
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="6"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-radio-wrapper"
                          >
                            <span
                              class="ant-radio"
                            >
                              <input
                                class="ant-radio-input"
                                type="radio"
                                value=""
                              />
                              <span
                                class="ant-radio-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_6
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          6
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="7"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-radio-wrapper"
                          >
                            <span
                              class="ant-radio"
                            >
                              <input
                                class="ant-radio-input"
                                type="radio"
                                value=""
                              />
                              <span
                                class="ant-radio-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_7
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          7
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="8"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-radio-wrapper"
                          >
                            <span
                              class="ant-radio"
                            >
                              <input
                                class="ant-radio-input"
                                type="radio"
                                value=""
                              />
                              <span
                                class="ant-radio-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_8
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          8
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="9"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-radio-wrapper"
                          >
                            <span
                              class="ant-radio"
                            >
                              <input
                                class="ant-radio-input"
                                type="radio"
                                value=""
                              />
                              <span
                                class="ant-radio-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish_9
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          9
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
            <ul
              class="ant-pagination ant-table-pagination ant-table-pagination-right"
              unselectable="unselectable"
            >
              <li
                class="ant-pagination-total-text"
              >
                共100条
              </li>
              <li
                aria-disabled="true"
                class="ant-pagination-prev ant-pagination-disabled"
                title="Previous Page"
              >
                <button
                  class="ant-pagination-item-link"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="left"
                    class="anticon anticon-left"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="left"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                tabindex="0"
                title="1"
              >
                <a
                  rel="nofollow"
                >
                  1
                </a>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-2"
                tabindex="0"
                title="2"
              >
                <a
                  rel="nofollow"
                >
                  2
                </a>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-3"
                tabindex="0"
                title="3"
              >
                <a
                  rel="nofollow"
                >
                  3
                </a>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-4"
                tabindex="0"
                title="4"
              >
                <a
                  rel="nofollow"
                >
                  4
                </a>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
                tabindex="0"
                title="5"
              >
                <a
                  rel="nofollow"
                >
                  5
                </a>
              </li>
              <li
                class="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
                tabindex="0"
                title="Next 5 Pages"
              >
                <a
                  class="ant-pagination-item-link"
                >
                  <div
                    class="ant-pagination-item-container"
                  >
                    <span
                      aria-label="double-right"
                      class="anticon anticon-double-right ant-pagination-item-link-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="double-right"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-pagination-item-ellipsis"
                    >
                      •••
                    </span>
                  </div>
                </a>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-10"
                tabindex="0"
                title="10"
              >
                <a
                  rel="nofollow"
                >
                  10
                </a>
              </li>
              <li
                aria-disabled="false"
                class="ant-pagination-next"
                tabindex="0"
                title="Next Page"
              >
                <button
                  class="ant-pagination-item-link"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="right"
                    class="anticon anticon-right"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="right"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li
                class="ant-pagination-options"
              >
                <div
                  class="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                        aria-autocomplete="list"
                        aria-controls="rc_select_TEST_OR_SSR_list"
                        aria-haspopup="listbox"
                        aria-owns="rc_select_TEST_OR_SSR_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="rc_select_TEST_OR_SSR"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="10 / page"
                    >
                      10 / page
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="ant-pagination-options-quick-jumper"
                >
                  Go to
                  <input
                    type="text"
                    value=""
                  />
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`RemotePage 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-table-wrapper antd_formily_table_boost undefined"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div>
            <div
              class="ant-spin ant-spin-spinning"
            >
              <span
                class="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
              </span>
            </div>
          </div>
          <div
            class="ant-spin-container ant-spin-blur"
          >
            <div
              class="ant-table ant-table-empty"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup />
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        >
                          名字
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          时间
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-placeholder"
                      >
                        <td
                          class="ant-table-cell"
                          colspan="2"
                        >
                          <div
                            class="ant-empty ant-empty-normal"
                          >
                            <div
                              class="ant-empty-image"
                            >
                              <svg
                                class="ant-empty-img-simple"
                                height="41"
                                viewBox="0 0 64 41"
                                width="64"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g
                                  fill="none"
                                  fill-rule="evenodd"
                                  transform="translate(0 1)"
                                >
                                  <ellipse
                                    class="ant-empty-img-simple-ellipse"
                                    cx="32"
                                    cy="33"
                                    rx="32"
                                    ry="7"
                                  />
                                  <g
                                    class="ant-empty-img-simple-g"
                                    fill-rule="nonzero"
                                  >
                                    <path
                                      d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                    />
                                    <path
                                      class="ant-empty-img-simple-path"
                                      d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                    />
                                  </g>
                                </g>
                              </svg>
                            </div>
                            <div
                              class="ant-empty-description"
                            >
                              No Data
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        {"data":[],"paginaction":{"current":1,"pageSize":10}}
      </div>
    </form>
  </div>
</DocumentFragment>
`;
